<resources>
    <string name="app_name">Tuner</string>

    <string name="guitar">Guitar</string>
    <string name="guitalele" translatable="false">Guitalele</string>
    <string name="ukulele" translatable="false">Ukulele</string>
    <string name="bass">Bass</string>
    <string name="other">Other</string>

    <string name="numberStrings">Number of strings:</string>
    <string name="string1">String 1:</string>
    <string name="string2">String 2:</string>
    <string name="string3">String 3:</string>
    <string name="string4">String 4:</string>
    <string name="string5">String 5:</string>
    <string name="string6">String 6:</string>
    <string name="go">Go</string>
    <string name="tune">Tune</string>

</resources>
